# SpeechToText-Linux

./: .gitignore  README.md  install.sh  pyproject.toml  speechtotext.desktop
speechtotext/: __init__.py  __main__.py  main.py  recorder.py  settings.py  style.css  transcriber.py  window.py
